fix scrollbar scrolling behind preview

--- a/app/styles/preview.scss
+++ b/app/styles/preview.scss
@@ -5,7 +5,7 @@ div.preview {
     bottom: 0;
     background-color: #303030;
     width: 250px;
-    height: 250px;
+    height: 25%;
     padding: 10px;
 
     .content {
